# bot-hunter

./: .gitignore  .mcp.json  README.md  TODO.md  pyproject.toml  submission.tsv
agents/: reviewer_prompt.md
artifacts/: sample_events.json  summary.json  supervised_pilot.json
bot_hunter/: __init__.py  cli.py  data.py  heuristics.py  ml.py  pipeline.py  report.py  supervised.py  web.py
development approach/: README.md  agentic_development_architecture.md  community_cheat_sheet.md  team_instructions.md
development approach/prompts/: algorithm_coder_prompt.md  algorithm_reviewer_prompt.md  coder_prompt.md  orchestrator_prompt.md  ux_coder_prompt.md  ux_reviewer_prompt.md
docs/: agentic_development_architecture.md  analysis_report.html  analysis_report.md  report_template.md  supervised_pilot_report.html  supervised_pilot_report.md
scripts/: check-agent-team  neural-benchmark  setup-memory-mcp  start-agent-team  start-algorithm-coder  start-algorithm-reviewer  start-coder  start-orchestrator  start-reviewer  start-ux-coder  start-ux-reviewer
tests/: test_data.py  test_heuristics.py  test_pipeline.py  test_supervised.py  test_web.py
