[project]
name = "bot-hunter"
version = "0.1.0"
description = "Dependency-light bot click anomaly detection with a local HTTP dashboard."
requires-python = ">=3.10"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=26.5.1",
    "playwright>=1.60.0",
    "pylint>=4.0.5",
    "pytest>=8",
]

[project.optional-dependencies]
eif = ["isotree>=0.6.1"]

[tool.setuptools.packages.find]
include = ["bot_hunter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
